Removed unnecessary tests and added citations to UBC Logging classes